--- a/test/test-reset.html
+++ b/test/test-reset.html
@@ -65,7 +65,16 @@
           resettable: true,
           value: function() {
             return new Date('1970-01-01');
-          },
+          }
+        },
+        noValueFunctionProperty: {
+          type: String,
+          resettable: true,
+          value: 'larb'
+        },
+        notResetabbleProperty: {
+          type: String,
+          value: 'cancan'
         }
       }
 
