--- a/test/test-reset.html
+++ b/test/test-reset.html
@@ -60,6 +60,19 @@
           },
         },
 
+        objectPropertyNoFunction: {
+          type: Object,
+          resettable: true,
+          value: {
+            areYouCrazyDontGoBetweenThem: true,
+            goBetweenThemAreYouCrazy: false,
+            iSaidGoAround: true,
+            youSaidGoBetweenThem: false,
+            iSaid: "Don't go between them!",
+            numberOfBoats: 4
+          }
+        },
+
         dateProperty: {
           type: Date,
           resettable: true,
