resetProperties can now work on props with no value function (#3)
* resetProperties can now work on props with no value function

* Update README to clarify new functionality

* Remove default params from destructuring because Edge hates them

* Add TDD test case for resettable objects

* Modify test element to have value function for object property test

* Update readme with proper examples and warnings

* Further tweak the README

--- a/resettable-properties-behavior.html
+++ b/resettable-properties-behavior.html
@@ -35,14 +35,14 @@ data: {
 ResettablePropertiesBehavior = { // eslint-disable-line no-global-assign
   _resetProperties: function (group) {
     var properties = this.constructor && this.constructor.properties ? this.constructor.properties : this.properties;
-    for (var propertyName in properties) {
-      var property = properties[propertyName];
-      if (property.resettable) {
-        if (!group || (property.resetGroups && property.resetGroups.indexOf(group) > -1)) {
-          this.set(propertyName, property.value());
-        }
+    var defaultPropObject = Object.entries(properties).reduce((acc, [key, {value, resettable, resetGroups}]) => {
+      if (resettable && (!group || (resetGroups && resetGroups.includes(group)))) {
+        acc[key] = typeof value === 'function' ? value() : value;
       }
-    }
+      return acc;
+    }, {});
+
+    Object.assign(this, defaultPropObject);
   },
 
   /* Resets all resettable properties.
