--- a/resettable-properties-behavior.html
+++ b/resettable-properties-behavior.html
@@ -37,7 +37,8 @@ ResettablePropertiesBehavior = { // eslint-disable-line no-global-assign
     var properties = this.constructor && this.constructor.properties ? this.constructor.properties : this.properties;
     var defaultPropObject = Object.entries(properties).reduce((acc, [key, {value, resettable, resetGroups}]) => {
       if (resettable && (!group || (resetGroups && resetGroups.includes(group)))) {
-        acc[key] = typeof value === 'function' ? value() : value;
+        // TW-1332 - value.apply here because in webpack, we don't get any context (`this`)
+        acc[key] = typeof value === 'function' ? value.apply(this) : value;
       }
       return acc;
     }, {});
